--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,10 +2,10 @@ apiVersion: v2
 name: mediawikijp
 description: A Helm chart for Kubernetes-MediaWikiJP
 type: application
-version: 0.1.0
-appVersion: 1.0
+version: 1.0.0
+appVersion: "1.0.0"
 
 dependencies:
 - name: mediawiki
-  version: 16.1.5
-  repository: oci://registry-1.docker.io/bitnamicharts/mediawiki
+  version: 17.0.0
+  repository: https://github.com/bitnami/charts.git
